  - new attribute "i18n" added to several XML functions; it takes a list with the named arguments
    "comment" or "context" to either produce an i18n comment node or an "i18n_context" attribute
  - new function rk.i18n.comment() to give context for translators
  - new function rk.JS.header() to easily generate JavaScript header code fit for i18n
changed:
  - function i18n() was changed to be used in JavaScript generation only; this breaks code
    using the function introduced with 0.06-4, but that was to be shortlived from the start...
    the i18n features of 0.06-4 will be completely replaced with some proper methods now
  - comment nodes (<!-- foo -->) are now globally allowed as child nodes in XML; important for
    i18n comments
removed:
  - the functions rk.set.language() rk.get.language() were no longer useful and therefore removed
  - also removed the option "lang" from rk.rkh.doc(), rk.XML.plugin(), rk.XML.pluginmap()
    and rk.plugin.skeleton()

changes in version 0.06-5 (2014-10-19)
fixed:
  - the "show" feature in rk.plugin.skeleton() was broken due to changes in
    the namespace defaults
  - scanning plugin XML code for JS and help related content didn't work as
    expected in rk.plugin.component()
  - rk.rkh.scan() now also recognises <optioncolumn> and <matrix> nodes
  - a logical bug prevented rk.plugin.component() to run with default values
    for XML
  - internal function paste.JS.options(), used by rk.JS.options(), was only
    working correctly for the "then" part if ite() statements in arrays; now
    also produces usable code for an "else" part, if available
added:
  - new functions rk.XML.valueselector(),  rk.XML.valueslot() and the
    combining rk.XML.values() to define <valueselector> and <valueslot> nodes,
    similar to rk.XML.varselector(),  rk.XML.varslot() and rk.XML.vars()
  - new function rk.XML.select() to define <select> nodes
  - new functions rk.set.rkh.prompter() and rk.get.rkh.prompter() to make it