@@ -15,7 +15,7 @@ URL: http://rkward.sourceforge.net
 Authors@R: c(person(given="Meik", family="Michalke",
     email="meik.michalke@hhu.de", role=c("aut", "cre")))
 Version: 0.06-6
-Date: 2014-11-30
+Date: 2014-12-01
 Collate:
     '00_class_01_rk.JS.arr.R'
     '00_class_02_rk.JS.var.R'
@@ -26,6 +26,7 @@ Collate:
     'rk.XML.plugin.R'
     'rk.JS.doc.R'
     '00_class_06_rk.plug.comp.R'
+    'R.comment.R'
     'echo.R'
     'i18n.R'
     'id.R'
@@ -35,6 +36,7 @@ Collate:
     'rk.comment.R'
     'rk-internal.R'
     'rk.JS.array.R'
+    'rk.JS.header.R'
     'rk.JS.options.R'
     'rk.JS.optionset.R'
     'rk.JS.saveobj.R'
