@@ -1,5 +1,6 @@
 # Generated by roxygen2 (4.0.2): do not edit by hand
 
+export(R.comment)
 export(echo)
 export(i18n)
 export(id)
@@ -8,6 +9,7 @@ export(join)
 export(qp)
 export(rk.JS.array)
 export(rk.JS.doc)
+export(rk.JS.header)
 export(rk.JS.options)
 export(rk.JS.optionset)
 export(rk.JS.saveobj)
